--- a/Kinzk5/Server/appsettings.json
+++ b/Kinzk5/Server/appsettings.json
@@ -1,5 +1,21 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "connStr": "Server=DESKTOP-GTD08VP;Database=db18Cons;Persist Security Info=True;User ID=sa;Password=123456;"
+  },
+  //"Jwt": {
+  //  "Key": "anilsecripmhvdsjfds",
+  //  "Issuer": "Anilkumar.com"
+  //},
+  "JwtSecurityKey": "RANDOM_KEY_MUST_NOT_BE_SHARED",
+  "JwtIssuer": "https://localhost",
+  "JwtAudience": "https://localhost",
+  "JwtExpiryInDays": 1,
+  "AllowedHosts": "*"
 }
